# kbsbmgr

./: .gitignore  Dockerfile  apache.conf  home.md  index.html  runlocal  startup.sh
.devcontainer/: devcontainer.json
ansible/: ansible.cfg  checkin.yml  checkout.yml  configureapache.yml  configurenginx.yml  deployproduction.yml  hello.yml  launchpreview.yml  setupserver.yml
ansible/env/: extravars
ansible/roles/apache/tasks/: main.yml
ansible/roles/apache/templates/: apache.conf.j2  ports.conf.j2
ansible/roles/checkin_content/tasks/: main.yml
ansible/roles/checkout_content/tasks/: main.yml
ansible/roles/configure_nginx/tasks/: main.yml
ansible/roles/configure_nginx/templates/: nginx.conf.http.j2  nginx.conf.https.j2  nginx.conf.j2
ansible/roles/copy_statamic2build/tasks/: main.yml
ansible/roles/deploy_production/tasks/: main.yml
ansible/roles/launch_preview/tasks/: main.yml
ansible/roles/setup_server/files/: git_config  statamic_env
ansible/roles/setup_server/tasks/: main.yml
ansible/roles/setup_server/templates/: git_config  nginx.conf.http.j2  (+1 more)
ansible/vars/: kbsb.yml
php/kbsbmgr/config/: app.php
php/kbsbmgr/routes/: web.php
php/kbsbmgr/users/: info@frbe-kbsb-ksb.be.yaml
python/: gunicorn.conf.prod  pyproject.toml  requirements.txt
python/libs/: reddevil-3.0.4-py3-none-any.whl
python/reddevilmgr/: main.py  reddevilmgr.code-workspace  settings.py
python/reddevilmgr/api/: __init__.py  ansible.py  checkin.py  checkout.py  ports.py  preview.py  production.py  setupwork.py
python/reddevilmgr/models/: mgrrequest.py  user.py
(+34 files in other folders)
