[tool.poetry]
name = "reddevilmgr_api"
version = "0.1.0"
description = "api for reddevilmgr"
authors = ["Ruben Decrop <ruben@chessdevil.net>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
ansible-runner = "^2.3.1"
reddevil = {path = "./libs/reddevil-3.0.4-py3-none-any.whl"}
ansible = "^7.2.0"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
